<resources>

    <string name="app_name">CatsEverywhere</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="prefs">Preferences</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="email">Email</string>
    <string name="enterMail">Enter email here</string>
    <string name="pw">Password</string>
    <string name="enterPw">Enter password</string>
    <string name="name">Name</string>
    <string name="enterName">Enter your name</string>
    <string name="submit">Submit</string>
    <string name="title_activity_splash">Roar</string>
    <string name="title_activity_google_maps">Cat Map</string>
    <string name="title_activity_image_selector">Select an Image</string>

</resources>